overflow fixed

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -27,6 +27,10 @@ body {
   font-size: $font-size-small;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 h1,
 h2 {
   font-size: $font-size-large;
